// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pairs createDbTask function covers case when WAVES is neither price nor amount asset 1`] = `
Object {
  "decimals": Array [
    Array [
      "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
    ],
    Array [
      "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
    ],
  ],
  "firstPrice": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "lastPrice": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "volume": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "volumeInPriceAsset": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "weightedAveragePrice": Array [
    Array [
      Object {
        "asset1": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
        "asset2": "WAVES",
      },
    ],
  ],
}
`;

exports[`Pairs createDbTask function covers case when WAVES — amount asset 1`] = `
Object {
  "decimals": Array [
    Array [
      "WAVES",
    ],
    Array [
      "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
    ],
  ],
  "firstPrice": Array [
    Array [
      Object {
        "amountAsset": "WAVES",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "lastPrice": Array [
    Array [
      Object {
        "amountAsset": "WAVES",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "volume": Array [
    Array [
      Object {
        "amountAsset": "WAVES",
        "priceAsset": "Ft8X1v1LTa1ABafufpaCWyVj8KkaxUWE6xBhW6sNFJck",
      },
    ],
  ],
  "volumeInPriceAsset": Array [],
  "weightedAveragePrice": Array [],
}
`;

exports[`Pairs createDbTask function covers case when WAVES — price asset 1`] = `
Object {
  "decimals": Array [
    Array [
      "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
    ],
    Array [
      "WAVES",
    ],
  ],
  "firstPrice": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "WAVES",
      },
    ],
  ],
  "lastPrice": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "WAVES",
      },
    ],
  ],
  "volume": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "WAVES",
      },
    ],
  ],
  "volumeInPriceAsset": Array [
    Array [
      Object {
        "amountAsset": "474jTeYx2r2Va35794tCScAXWJG9hU2HcgxzMowaZUnu",
        "priceAsset": "WAVES",
      },
    ],
  ],
  "weightedAveragePrice": Array [],
}
`;
